# fs4m

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: README.md
examples/sf2/: GM.sf2
help/: fluidmax~.maxhelp  fluidsynth~.maxhelp  fs4m_tilde.maxhelp  fs4m~.maxhelp  fsm~.maxhelp  fs~.maxhelp
patchers/: fluidsynth~.maxpat  tabbed.maxpat
source/projects/fluidmax_tilde/: CMakeLists.txt  fluidmax_gen.h  fluidmax_tilde.c  fluidmax_tilde.h
source/projects/fluidsynth_tilde/: fluidsynth_tilde.c  fluidsynth_tilde.h  fluidsynth_tilde_gen.h
source/projects/fs4m_tilde/: CHANGELOG.md  CMakeLists.txt  README.md  fs4m_tilde.c
source/projects/fs_tilde/: CMakeLists.txt  README.md  fs_tilde.c  fs_tilde.h  fs_tilde_gen.h
source/projects/fsm_tilde/: CHANGELOG.md  README.md  fsm_tilde.c  fsm_tilde.h
source/scratch/: alt.c  buffered.c  link.txt  notes.md
source/scripts/: bundler.cpp  bundler.py  download_sf2.sh  install_fluidsynth.sh  install_sf2.sh
source/scripts/cmake/: fs_external.cmake  fs_test.cmake
source/tests/: test_fs.c
source/tests/scratch/: process.c
source/tests/test_adriver/: test_adriver.c
source/tests/test_cmd/: test_cmd.c
source/tests/test_memstream/: test_memstream.c
source/tests/test_process/: CMakeLists.txt  test_process.c
source/tests/test_writefloat/: test_writefloat.c
